--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 Flask==0.10.1
+Flask-Login==0.2.7
+Flask-Mail==0.9.0
+Flask-Principal==0.4.0
+Flask-Script==0.6.3
+Flask-Security==1.6.9
 Flask-WTF==0.9.3
 Jinja2==2.7.1
 MarkupSafe==0.18
 WTForms==1.0.5
 Werkzeug==0.9.4
+blinker==1.3
 flask-mongoengine==0.7.0
 itsdangerous==0.23
 mongoengine==0.8.4
+passlib==1.6.1
 pymongo==2.6.3
 wsgiref==0.1.2
